--- a/index.xhtml
+++ b/index.xhtml
@@ -15,7 +15,7 @@
 
         function loadDefaultRom() {
             var fileInput = document.getElementById('local_file_open');
-            var defaultRomPath = 'roms/pokemon_red.gb';
+            var defaultRomPath = 'roms/pokemon_gold.gbc';
 
             // Create a new File object representing our default ROM
             fetch(defaultRomPath)
