--- a/index.xhtml
+++ b/index.xhtml
@@ -57,9 +57,9 @@
             <h3>Now on Solana</h3>
         </div>
         <div id="social">
-            <a href="https://twitter.com/taisel" target="_blank"><img id="socialicon" src="images/twitter.png" alt="Twitter" /></a>
-            <a href="https://t.me/solana_pump_fun" target="_blank"><img id="socialicon" src="images/telegram.png" alt="Telegram" /></a>
-            <a href="https://t.me/solana_pump_fun" target="_blank"><img id="socialicon" src="images/pump_icon.png" alt="Pump Fun" /></a>
+            <a href="https://x.com/PokemonGoldSol" target="_blank"><img id="socialicon" src="images/twitter.png" alt="Twitter" /></a>
+            <a href="https://t.me/PokemonGold_Solana" target="_blank"><img id="socialicon" src="images/telegram.png" alt="Telegram" /></a>
+            <a href="#" target="_blank"><img id="socialicon" src="images/pump_icon.png" alt="Pump Fun" /></a>
         </div>
     </div>
 
