--- a/index.xhtml
+++ b/index.xhtml
@@ -52,7 +52,7 @@
 
 <body>
     <div id="banner">
-        <img id="banner-image" src="images/pokemonheader.gif" alt="GameBoy Online" />
+        <img id="banner-image" src="images/pokegoldlogo.gif" alt="GameBoy Online" />
         <div id="header">
             <h3>Now on Solana</h3>
         </div>
