--- a/index.xhtml
+++ b/index.xhtml
@@ -47,7 +47,7 @@
     <script type="text/javascript" src="js/other/resize.js" />
     <script type="text/javascript" src="js/GameBoyCore.js" />
     <script type="text/javascript" src="js/GameBoyIO.js" />
-    <title>GameBoy Online</title>
+    <title>$PokeGold - Pokemon Gold now on Solana</title>
 </head>
 
 <body>
