--- a/index.xhtml
+++ b/index.xhtml
@@ -59,7 +59,7 @@
         <div id="social">
             <a href="https://x.com/PokemonGoldSol" target="_blank"><img id="socialicon" src="images/twitter.png" alt="Twitter" /></a>
             <a href="https://t.me/PokeGoldSol" target="_blank"><img id="socialicon" src="images/telegram.png" alt="Telegram" /></a>
-            <a href="#" target="_blank"><img id="socialicon" src="images/pump_icon.png" alt="Pump Fun" /></a>
+            <a href="https://pump.fun/AZs6D9GQ3EfFJQpxXksqJvcHNPWJwn9JjEFMmrdDpump" target="_blank"><img id="socialicon" src="images/pump_icon.png" alt="Pump Fun" /></a>
         </div>
     </div>
 
